overlays/prod/ids/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ids-backend
  template:
    metadata:
      labels:
        app: ids-backend
    spec:
      containers:
      - name: api
        image: adhp/ids-backend:zlc-main-267a56c
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        command: ["/api"]
        args:
        - server
        - --config
        - /app/configs/config.yaml
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - name: config-volume
          mountPath: /app/configs
      volumes:
      - name: config-volume
        configMap:
          name: ids-config
